--- a/.github/workflows/modules/build-and-publish-ghcr-image.yml
+++ b/.github/workflows/modules/build-and-publish-ghcr-image.yml
@@ -3,32 +3,24 @@ name: Build and Publish to GHCR
 on:
   workflow_call:
     inputs:
-      commit_sha:
+      sha:
         description: 'Commit SHA to build from'
         required: true
         type: string
-      ghcr_tag:
+      tag:
         description: "Tag for GHCR image"
         required: true
         type: string
-      publish_to_ghcr:
-        description: "Publish to GitHub Container Registry"
-        default: true
-        type: boolean
   workflow_dispatch:
     inputs:
-      commit_sha:
+      sha:
         description: 'Commit SHA to build from'
         required: true
         type: string
-      ghcr_tag:
+      tag:
         description: "Tag for GHCR image"
         required: true
         type: string
-      publish_to_ghcr:
-        description: "Publish to GitHub Container Registry"
-        default: true
-        type: boolean
 
 env:
   SSH_AUTH_SOCK: /tmp/ssh_agent.sock
@@ -44,7 +36,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: ${{ inputs.commit_sha }}
+          ref: ${{ inputs.sha }}
 
       - name: Setup Earthly
         uses: ./.github/earthly-setup
@@ -112,7 +104,6 @@ jobs:
           done
 
       - name: Main Build
-        if: ${{ inputs.publish_to_ghcr }}
         env:
           EARTHLY_CI: true
           EARTHLY_PUSH: false
@@ -134,8 +125,8 @@ jobs:
         run: |
           repository_name="${GITHUB_REPOSITORY##*/}"
           target_image="ghcr.io/${{ github.repository }}/$repository_name-node"
-          commit_sha="${{ inputs.commit_sha }}"
-          custom_tag="${{ inputs.ghcr_tag }}"
+          commit_sha="${{ inputs.sha }}"
+          custom_tag="${{ inputs.tag }}"
 
           docker tag ghcr-image:latest $target_image:latest
           docker tag ghcr-image:latest $target_image:$commit_sha
