--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ members = [
 	"partner-chains-cli",
 	"pallets/native-token-management",
 	"primitives/native-token-management",
+	"toolkit/offchain",
 ]
 resolver = "2"
 
@@ -58,6 +59,8 @@ codegen-units = 1
 anyhow = "1.0.81"
 async-trait = "0.1"
 assert_cmd = "2.0.14"
+cardano-serialization-lib = { default-features = false, version = "13.1.0" }
+cbor_event = { version = "2.4.0" }
 clap = { version = "4.5.10", features = ["derive"] }
 ed25519-zebra = { version = "4.0.3" }
 ed25519 = { version = "2.2.2" }
@@ -75,12 +78,14 @@ num-bigint = { version = "0.4.3", default-features = false }
 num-traits = { version = "0.2.17", default-features = false }
 parity-scale-codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive", "max-encoded-len"] }
 quickcheck = { version = "1.0.3" }
+pallas-addresses = { git = "https://github.com/txpipe/pallas.git", tag = "v0.30.2" }
+pallas-primitives = { git = "https://github.com/txpipe/pallas.git", tag = "v0.30.2" }
 proptest = { version = "1.5.0" }
+scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
 quickcheck_macros = { version = "1" }
 quote = "1.0"
 rand_chacha = { version = "0.3.1", default-features = false }
 rand = { version = "0.8.5", default-features = false }
-scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
 secp256k1 = { version = "0.28.2", default-features = false }
 serde = { version = "1.0.209", default-features = false, features = ["derive", "alloc"] }
 serde_json = { version = '1.0.132', default-features = false, features = ["alloc"] }
@@ -89,6 +94,7 @@ tempfile = "3.10.1"
 thiserror = { version = "1.0.48" }
 time = { version = "0.3.36", default-features = false }
 tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
+uplc = { version = "1.1.3" }
 lazy_static = "1.4.0"
 lru = { version = "0.12.4" }
 pretty_assertions = { version = "1.4.1" }
@@ -173,7 +179,6 @@ substrate-frame-rpc-system = { default-features = false, git = "https://github.c
 substrate-prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409" }
 substrate-test-runtime-client = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409" }
 substrate-wasm-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409" }
-cardano-serialization-lib = { default-features = false, version = "13.1.0" }
 
 # local dependencies
 sidechain-runtime = { path = "runtime" }
@@ -211,3 +216,4 @@ sc-partner-chains-consensus-aura = { path = "client/consensus/aura", default-fea
 sp-partner-chains-consensus-aura = { path = "primitives/consensus/aura", default-features = false }
 pallet-partner-chains-session = { path = "pallets/partner-chains-session", default-features = false }
 pallet-session-runtime-stub = { path = "pallets/pallet-session-runtime-stub", default-features = false }
+partner-chains-cardano-offchain = { path = "toolkit/offchain" }
