--- a/.github/actions/deploy/deploy-rustdoc/action.yml
+++ b/.github/actions/deploy/deploy-rustdoc/action.yml
@@ -47,5 +47,6 @@ runs:
       if: ${{ github.ref_name == 'master' }}
       uses: peaceiris/actions-gh-pages@v3.9.3
       with:
+        github_token: ${{ env.GITHUB_TOKEN }}
         publish_branch: gh-pages
         publish_dir: ./target/doc
