--- a/partner-chains-cli/Cargo.toml
+++ b/partner-chains-cli/Cargo.toml
@@ -32,7 +32,12 @@ secp256k1 = { workspace = true, features = ["std"] }
 colored = { version = "2.1.0" }
 hex-literal = { workspace = true }
 pallas-addresses = { git = "https://github.com/txpipe/pallas.git", tag = "v0.30.2" }
-jsonrpsee = { workspace = true }
+jsonrpsee = { workspace = true, features = [
+    "client-core",
+    "http-client",
+    "macros",
+] }
+tokio = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
