fix: no cargo tests
feat: no CI tests

feat: release notes

feat: artifact name fixes

fix: macos

fix: builds

fix: release deps

fix: artifact name

fix: cd

fix: artifact

fix: artifacts

fix: chain specs

fix: sha and tag

feat: release notes

fix: path

fix: apostrophe

fix: deploy

fix: ECR image chmod

feat: Dockerfile

fix: deps

fix: image

fix: namespace

fix: no raw

test: publish release

fix: GHCR

fix: token

fix: tags

fix: release

fix: publish

fix: token

fix: actor

fix: tokens

fix: genesis files

fix: publish

fix: publish

fix: publish and update release notes

fix: comment out

--- a/.github/actions/artifacts/build-pc-artifacts/action.yml
+++ b/.github/actions/artifacts/build-pc-artifacts/action.yml
@@ -1,11 +1,11 @@
 name: "Build and Upload PC Artifacts"
 description: "Build and upload partner-chains artifacts for Linux, macOS x86_64, and macOS arm64"
 inputs:
-  sha:
-    description: "partner-chains commit SHA or branch to build from"
-    required: true
   tag:
     description: "partner-chains release tag to append to artifact name"
+    required: true
+  sha:
+    description: "Commit SHA to checkout"
     required: true
   os:
     description: "Operating system for the build (linux, macos-x86_64, macos-arm64)"
@@ -14,6 +14,10 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        ref: ${{ inputs.sha }} 
     - name: Set filename variables
       shell: bash
       run: |
@@ -28,14 +32,10 @@ runs:
           echo "PARTNER_CHAINS_NODE=partner-chains-node-${{ inputs.tag }}-aarch64-apple-darwin" >> $GITHUB_ENV
         fi
 
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        ref: ${{ inputs.sha }}
-
     - name: Install protoc
       shell: bash
       run: |
+        cd $GITHUB_WORKSPACE
         if [[ "${{ inputs.os }}" == "linux" ]]; then
           sudo apt-get install -y protobuf-compiler
         elif [[ "${{ inputs.os }}" == "macos-x86_64" ]]; then
@@ -49,48 +49,45 @@ runs:
         fi
 
     - name: Build partner-chains-node
+      shell: bash
       run: |
+        cd $GITHUB_WORKSPACE
         if [[ "${{ inputs.os }}" == "linux" ]]; then
           rustup target add x86_64-unknown-linux-gnu
           cargo build -p partner-chains-node --locked --release --target x86_64-unknown-linux-gnu
           cp target/x86_64-unknown-linux-gnu/release/partner-chains-node $PARTNER_CHAINS_NODE
+          chmod +x $PARTNER_CHAINS_NODE
         elif [[ "${{ inputs.os }}" == "macos-x86_64" ]]; then
           rustup target add x86_64-apple-darwin
           cargo build -p partner-chains-node --locked --release --target x86_64-apple-darwin
           cp target/x86_64-apple-darwin/release/partner-chains-node $PARTNER_CHAINS_NODE
+          chmod +x $PARTNER_CHAINS_NODE
         elif [[ "${{ inputs.os }}" == "macos-arm64" ]]; then
           rustup target add aarch64-apple-darwin
           cargo build -p partner-chains-node --locked --release --target aarch64-apple-darwin
           cp target/aarch64-apple-darwin/release/partner-chains-node $PARTNER_CHAINS_NODE
-        fi
-      shell: bash
-
-    - name: Test partner-chains-node
-      shell: bash
-      run: |
-        if [[ "${{ inputs.os }}" == "linux" ]]; then
-          cargo test --locked --release --target x86_64-unknown-linux-gnu
-        elif [[ "${{ inputs.os }}" == "macos-x86_64" ]]; then
-          cargo test --locked --release --target x86_64-apple-darwin
-        elif [[ "${{ inputs.os }}" == "macos-arm64" ]]; then
-          cargo test --locked --release --target aarch64-apple-darwin
+          chmod +x $PARTNER_CHAINS_NODE
         fi
 
     - name: Build partner-chains-cli
       shell: bash
       run: |
+        cd $GITHUB_WORKSPACE
         if [[ "${{ inputs.os }}" == "linux" ]]; then
           rustup target add x86_64-unknown-linux-gnu
           cargo build -p partner-chains-cli --locked --release --target x86_64-unknown-linux-gnu
           cp target/x86_64-unknown-linux-gnu/release/partner-chains-cli $PARTNER_CHAINS_CLI
+          chmod +x $PARTNER_CHAINS_CLI
         elif [[ "${{ inputs.os }}" == "macos-x86_64" ]]; then
           rustup target add x86_64-apple-darwin
           cargo build -p partner-chains-cli --locked --release --target x86_64-apple-darwin
           cp target/x86_64-apple-darwin/release/partner-chains-cli $PARTNER_CHAINS_CLI
+          chmod +x $PARTNER_CHAINS_CLI
         elif [[ "${{ inputs.os }}" == "macos-arm64" ]]; then
           rustup target add aarch64-apple-darwin
           cargo build -p partner-chains-cli --locked --release --target aarch64-apple-darwin
           cp target/aarch64-apple-darwin/release/partner-chains-cli $PARTNER_CHAINS_CLI
+          chmod +x $PARTNER_CHAINS_CLI
         fi
 
     - name: Upload partner-chains-cli artifact
