--- a/.github/actions/images/build-and-publish-ecr/action.yml
+++ b/.github/actions/images/build-and-publish-ecr/action.yml
@@ -13,29 +13,41 @@ outputs: {}
 runs:
   using: "composite"
   steps:
-    - name: Download partner-chains-node-x86_64-linux-artifact
+    - name: Download partner-chains-node-linux-artifact
       uses: actions/download-artifact@v4
       with:
-        name: partner-chains-node-x86_64-linux-artifact
+        name: partner-chains-node-linux-artifact
 
-    - name: Create and Configure Docker Container
-      id: create-container
+    - name: Write Dockerfile
       run: |
-        container_id=$(docker run -d debian:bullseye-slim sleep infinity)
-        echo "container_id=$container_id" >> $GITHUB_ENV
-        docker exec $container_id useradd -m -u 1000 -U -s /bin/sh -d /substrate substrate
-        docker exec $container_id mkdir -p /data /substrate/.local/share/partner-chains-node
-        docker exec $container_id chown -R substrate:substrate /data /substrate
-        docker exec $container_id rm -rf /usr/bin/apt* /usr/bin/dpkg*
-        docker exec $container_id ln -s /data /substrate/.local/share/partner-chains-node
-        docker cp ./partner-chains-node-${{ inputs.tag }}-x86_64-linux $container_id:/usr/local/bin/partner-chains-node
-        docker commit --change='EXPOSE 30333 9615 9933 9944' --change='ENTRYPOINT ["/usr/local/bin/partner-chains-node"]' $container_id substrate-node:${{ inputs.sha }}
+        cat > Dockerfile <<EOF
+        FROM debian:bookworm-slim
+        RUN apt-get update && apt-get install -y \\
+            ca-certificates \\
+            libgcc-s1 \\
+            libstdc++6 \\
+            libc6 \\
+            libssl3 \\
+            zlib1g \\
+            libgomp1 \\
+            && rm -rf /var/lib/apt/lists/*
+        RUN useradd -m -u 1000 -U -s /bin/sh -d /substrate substrate \\
+            && mkdir -p /data /substrate/.local/share/partner-chains-node \\
+            && chown -R substrate:substrate /data /substrate \\
+            && ln -s /data /substrate/.local/share/partner-chains-node
+        COPY ./partner-chains-node-${{ inputs.tag }}-x86_64-linux /usr/local/bin/partner-chains-node
+        RUN chown substrate:substrate /usr/local/bin/partner-chains-node \\
+            && chmod +x /usr/local/bin/partner-chains-node
+        USER substrate
+        EXPOSE 30333 9615 9933 9944
+        VOLUME ["/data"]
+        ENTRYPOINT ["/usr/local/bin/partner-chains-node"]
+        EOF
       shell: bash
 
-    - name: Cleanup Docker Container
-      if: always()
+    - name: Build Docker Image
       run: |
-        docker rm -f ${{ env.container_id }}
+        docker build -t substrate-node:${{ inputs.sha }} .
       shell: bash
 
     - name: Acquire AWS credentials
