--- a/.github/actions/release/create-draft-release/action.yml
+++ b/.github/actions/release/create-draft-release/action.yml
@@ -21,48 +21,48 @@ runs:
         echo "PARTNER_CHAINS_NODE_AARCH64_APPLE_DARWIN=partner-chains-node-${{ inputs.tag }}-aarch64-apple-darwin" >> $GITHUB_ENV
       shell: bash
 
-    - name: Download Linux CLI artifact
+    - name: Download partner-chains-cli-linux-artifact
       uses: actions/download-artifact@v4
       with:
-        name: ${{ env.PARTNER_CHAINS_CLI_X86_64_LINUX }}
+        name: partner-chains-cli-linux-artifact
         path: artifact-linux/
 
-    - name: Download Linux NODE artifact
+    - name: Download partner-chains-node-linux-artifact
       uses: actions/download-artifact@v4
       with:
-        name: ${{ env.PARTNER_CHAINS_NODE_X86_64_LINUX }}
+        name: partner-chains-node-linux-artifact
         path: artifact-linux/
 
-    - name: Download macOS x86_64 CLI artifact
+    - name: Download partner-chains-cli-macos-x86_64-artifact
       uses: actions/download-artifact@v4
       with:
-        name: ${{ env.PARTNER_CHAINS_CLI_X86_64_APPLE_DARWIN }}
+        name: partner-chains-cli-macos-x86_64-artifact
         path: artifact-macos-x86_64/
 
-    - name: Download macOS x86_64 NODE artifact
+    - name: Download partner-chains-node-macos-x86_64-artifact
       uses: actions/download-artifact@v4
       with:
-        name: ${{ env.PARTNER_CHAINS_NODE_X86_64_APPLE_DARWIN }}
+        name: partner-chains-node-macos-x86_64-artifact
         path: artifact-macos-x86_64/
 
-    - name: Download macOS ARM64 CLI artifact
+    - name: Download partner-chains-cli-macos-arm64-artifact
       uses: actions/download-artifact@v4
       with:
-        name: ${{ env.PARTNER_CHAINS_CLI_AARCH64_APPLE_DARWIN }}
+        name: partner-chains-cli-macos-arm64-artifact
         path: artifact-macos-arm64/
 
-    - name: Download macOS ARM64 NODE artifact
+    - name: Download partner-chains-node-macos-arm64-artifact
       uses: actions/download-artifact@v4
       with:
-        name: ${{ env.PARTNER_CHAINS_NODE_AARCH64_APPLE_DARWIN }}
+        name: partner-chains-node-macos-arm64-artifact
         path: artifact-macos-arm64/
 
     - name: Check if release already exists
       id: check_release
       run: |
         tag="${{ inputs.tag }}"
-        release_response=$(curl -s -H "Authorization: token ${{ env.GITHUB_TOKEN }}" \
-                          "https://api.github.com/repos/${{ github.repository }}/releases/tags/$tag")
+        release_response=$(curl -s -H "Authorization: token ${{ env.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/tags/$tag")
+
         if echo "$release_response" | grep -q '"message": "Not Found"'; then
           echo "release_exists=false" >> $GITHUB_ENV
           echo "::set-output name=release_exists::false"
@@ -79,8 +79,15 @@ runs:
       if: ${{ steps.check_release.outputs.release_exists == 'false' }}
       run: |
         tag="${{ inputs.tag }}"
+        release_body="### Pre-release candidate for version $tag\n\n"
+        release_body+="This is a draft pre-release candidate for release $tag that is undergoing testing. The current testing status is:\n\n"
+        release_body+="- [x] Local environment\n"
+        release_body+="- [ ] Staging preview environment\n"
+        release_body+="- [ ] Staging preprod environment\n\n"
+        release_body+="Please note: this release is not yet fully verified and is pending further testing.\n"
+
         release_response=$(curl -s -X POST -H "Authorization: token ${{ env.GITHUB_TOKEN }}" \
-                          -d '{"tag_name": "'$tag'", "name": "'$tag'", "body": "Draft release for '$tag'", "draft": true}' \
+                          -d '{"tag_name": "'$tag'", "name": "'$tag'", "body": "'"$release_body"'", "draft": true, "generate_release_notes": true, "prerelease": true}' \
                           "https://api.github.com/repos/${{ github.repository }}/releases")
         echo "release_id=$(echo $release_response | jq -r .id)" >> $GITHUB_ENV
         echo "::set-output name=release_id::$(echo $release_response | jq -r .id)"
