--- a/.github/actions/release/publish-draft-release/action.yml
+++ b/.github/actions/release/publish-draft-release/action.yml
@@ -1,11 +1,17 @@
 name: "Publish Release"
-description: "Publishes a GitHub release from draft status."
+description: "Publishes a GitHub release from draft status and updates release notes."
 inputs:
   tag:
     description: "Tag for the release"
     required: true
 
-outputs: {}
+outputs:
+  release_exists:
+    description: "Whether the release exists"
+    value: ${{ steps.check_release.outputs.release_exists }}
+  release_id:
+    description: "ID of the release"
+    value: ${{ steps.check_release.outputs.release_id }}
 
 runs:
   using: "composite"
@@ -13,25 +19,66 @@ runs:
     - name: Check if release exists
       id: check_release
       run: |
+        set -e
         tag="${{ inputs.tag }}"
         release_response=$(curl -s -H "Authorization: token ${{ env.GITHUB_TOKEN }}" \
-                          "https://api.github.com/repos/${{ github.repository }}/releases/tags/$tag")
-        if echo "$release_response" | grep -q '"message": "Not Found"'; then
-          echo "release_exists=false" >> $GITHUB_ENV
-          echo "::set-output name=release_exists::false"
+          "https://api.github.com/repos/${{ github.repository }}/releases?per_page=100")
+
+        release_id=$(echo "$release_response" | jq -r '.[] | select(.tag_name=="'"$tag"'") | .id')
+
+        if [ -z "$release_id" ] || [ "$release_id" == "null" ]; then
+          echo "release_exists=false" >> "$GITHUB_OUTPUT"
+          echo "release_id=" >> "$GITHUB_OUTPUT"
         else
-          echo "release_exists=true" >> $GITHUB_ENV
-          echo "::set-output name=release_exists::true"
-          echo "release_id=$(echo $release_response | jq -r .id)" >> $GITHUB_ENV
-          echo "::set-output name=release_id::$(echo $release_response | jq -r .id)"
+          echo "release_exists=true" >> "$GITHUB_OUTPUT"
+          echo "release_id=$release_id" >> "$GITHUB_OUTPUT"
         fi
       shell: bash
 
     - name: Publish release
-      if: ${{ steps.check_release.outputs.release_exists == 'true' }}
       run: |
-        release_id="${{ steps.check_release.outputs.release_id }}"
-        curl -s -X PATCH -H "Authorization: token ${{ env.GITHUB_TOKEN }}" \
-          -d '{"draft": false}' \
-          "https://api.github.com/repos/${{ github.repository }}/releases/$release_id"
+        set -e
+        if [[ "${{ steps.check_release.outputs.release_exists }}" == "true" ]]; then
+          release_id="${{ steps.check_release.outputs.release_id }}"
+          
+          # Set draft to false
+          response=$(curl -s -X PATCH -H "Authorization: token ${{ env.GITHUB_TOKEN }}" \
+            -d '{"draft": false}' \
+            "https://api.github.com/repos/${{ github.repository }}/releases/$release_id")
+          
+          echo "Response: $response"
+          
+          # Verify the release was updated
+          if echo "$response" | jq -e '.id' >/dev/null; then
+            echo "Release updated successfully"
+          else
+            echo "Failed to update release"
+            exit 1
+          fi
+          
+          # Extract the current release body
+          current_body=$(echo "$response" | jq -r .body)
+          
+          # Perform the desired replacements
+          updated_body=$(echo "$current_body" | \
+            sed 's/- \[ \] Staging preview environment/- [x] Staging preview environment/g' | \
+            sed 's/This is a draft pre-release/This is a pre-release/g')
+          
+          # Update the release body with the modified content
+          updated_response=$(curl -s -X PATCH -H "Authorization: token ${{ env.GITHUB_TOKEN }}" \
+            -d '{"body": "'"$updated_body"'"}' \
+            "https://api.github.com/repos/${{ github.repository }}/releases/$release_id")
+          
+          echo "Body Update Response: $updated_response"
+          
+          # Verify the release body was updated
+          if echo "$updated_response" | jq -e '.body' >/dev/null; then
+            echo "Release body updated successfully"
+          else
+            echo "Failed to update release body"
+            exit 1
+          fi
+        else
+          echo "Release does not exist, skipping publish step."
+        fi
       shell: bash
