--- a/mainchain-follower/db-sync-follower/Cargo.toml
+++ b/mainchain-follower/db-sync-follower/Cargo.toml
@@ -29,6 +29,7 @@ figment = { workspace = true }
 substrate-prometheus-endpoint = { workspace = true }
 derive-new = { workspace = true }
 lru = { workspace = true }
+sp-native-token-management = { workspace = true, features = ["std"], optional = true }
 
 [dev-dependencies]
 tokio-test = "0.4.3"
@@ -38,4 +39,4 @@ ctor = "0.2.5"
 default = []
 block-source = ["main-chain-follower-api/block-source"]
 candidate-source = ["main-chain-follower-api/candidate-source"]
-native-token = ["main-chain-follower-api/native-token"]
+native-token = ["sp-native-token-management"]
