--- a/primitives/native-token-management/Cargo.toml
+++ b/primitives/native-token-management/Cargo.toml
@@ -9,7 +9,6 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 async-trait = { workspace = true, optional = true }
 envy = { workspace = true, optional = true }
-main-chain-follower-api = { workspace = true, optional = true, features = ["native-token"] }
 parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
 sidechain-domain = { workspace = true }
@@ -21,6 +20,8 @@ sp-runtime = { workspace = true }
 thiserror = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
 sp-version = { workspace = true, optional = true }
+derive-new = { workspace = true }
+derive_more = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true }
@@ -29,7 +30,6 @@ tokio = { workspace = true }
 default = ["std"]
 std = [
     "async-trait",
-    "main-chain-follower-api/std",
     "parity-scale-codec/std",
     "scale-info/std",
     "sidechain-domain/std",
@@ -48,3 +48,4 @@ serde = [
 	"scale-info/serde",
 	"sidechain-domain/serde",
 ]
+mock = []
